1999-05-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h, common-src/alloc.c, common-src/event.c,
	common-src/rsh-security.c, server-src/driver.c,
	server-src/dumper.c: (min, max): consolidate all min/max
	definitions into amanda.h

1999-05-14  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/TAPE.CHANGERS (chg-rth): URL for chs is no longer valid.

1999-05-12  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h, common-src/alloc.c, common-src/file.c:
	const the filename arg to all of the dbmalloc versions of
	alloc and io functions

1999-05-11  Mike Grupenhoff <kashmir@munge.com>

	* common-src/protocol.c (proto_t): don't need prev and next ptrs
	anymore

1999-05-11  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h, common-src/alloc.c: remove the static
	buffer manager - nothing uses it.  It can be resurrected in
	the future if needed.

1999-05-11  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: define stringconcat() macros that
	concatenate two const strings together
	* common-src/versuff.c.in (versionsuffix, version): generate
	data at compile time using stringconcat().
	* common-src/genversion.c: simplify, don't need to alloc anything
	* common-src/Makefile.am (genversion_LDADD): this doesn't need
	alloc.o or error.o anymore

1999-05-11  Mike Grupenhoff <kashmir@munge.com>

	* common-src/security.c (security_handleinit, security_streaminit):
	change default error message "unknown error" to "unknown protocol
	error" or "unknown stream error" to help identify where an
	messageless error was triggered.

1999-05-11  Mike Grupenhoff <kashmir@munge.com>

	* client-src/amandad.c (main): call initgroups(), and also set
	the real gid.

1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* server-src/driver.c (start_some_dumps): if a dumper is
	constrained, and some dumpers or the taper are active, register
	a EV_WAIT event.
	* server-src/driver.c (handle_taper_result,