@@ -1,5 +1,10 @@
 1999-05-14  Mike Grupenhoff <kashmir@munge.com>
 
+	* client-src/amandad.c (action_t): consolidate A_PKTTIMEOUT and
+	A_REPTIMEOUT into just A_TIMEOUT.
+
+1999-05-14  Mike Grupenhoff <kashmir@munge.com>
+
 	* common-src/amanda.h, common-src/alloc.c, common-src/event.c,
 	common-src/rsh-security.c, server-src/driver.c,
 	server-src/dumper.c: (min, max): consolidate all min/max
